优化：自增ID字段升级为bigint-系统字典